# PLM_finetune

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: prepare_data.ipynb
plft/: datamodule.py  pipeline.py  train.py
plft/analysis/: analyze_run.py
plft/configs/: protbert_seq_cls.yaml  protbert_seq_cls_frozen_backbone.yaml  registries.py  template.yaml
plft/data/: preprocess_functions.py
plft/models/: model.py  taskhead.py
plft/utils/: config.py  lora_utils.py  loss.py  metrics.py
script/: example_task_models.py
test_notebooks/: test_datamodule.ipynb  test_model.ipynb
