[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plft"
version = "0.0.0"
description = "Protein Language Model Fine-Tuning utilities and training pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [ {name = "leerang77"} ]
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "hydra-core",
    "omegaconf",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["plft*"]

[tool.setuptools]
zip-safe = false
